--- a/IngresoPedidos/AgregarObservacion.xaml
+++ b/IngresoPedidos/AgregarObservacion.xaml
@@ -8,7 +8,7 @@
         Height="220" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/list.png">
 
     <Grid FocusManager.FocusedElement="{Binding ElementName=tbObservacion}" Width="314" Height="191">
-        <TextBox Name="tbObservacion" Text="OBSERVACION" Foreground="LightGray" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFABADB3" TabIndex="8" Height="135" VerticalAlignment="Top" Margin="10,10,10,0" FontWeight="Bold"/>
+        <TextBox Name="tbObservacion" Text="OBSERVACION" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFABADB3" TabIndex="8" Height="135" VerticalAlignment="Top" Margin="10,10,10,0" FontWeight="Bold"/>
         <Button Name="btnGuardar" Content="Guardar" ToolTip="Guardar en Base de Datos" Margin="0,0,0,10" TabIndex="9" Height="22" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="70"/>
     </Grid>
 </Window>
