tengo el alma en pedazos... ya no awanto esta pena :v

--- a/IngresoPedidos/LoginWindow.xaml
+++ b/IngresoPedidos/LoginWindow.xaml
@@ -7,8 +7,8 @@
         Title="Login" Height="150" Width="150" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" KeyDown="Window_KeyDown" Icon="/IngresoPedidos;component/Resources/list.png">
 
     <Grid FocusManager.FocusedElement="{Binding ElementName=tbLegajo}" Height="121" Width="144">
-        <TextBox x:Name="tbLegajo" Text="LEGAJO" Margin="10,10,10,0" VerticalContentAlignment="Center" GotFocus="TbLegajo_GotFocus" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="1" Height="26" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="pbContraseña" Margin="10,50,10,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" GotFocus="PbContraseña_GotFocus" Password="--------" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbLegajo" MaxLength="4" MaxLines="1" Text="LEGAJO" Margin="10,10,10,0" VerticalContentAlignment="Center" GotFocus="TbLegajo_GotFocus" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="1" Height="26" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="pbContraseña" MaxLength="8" Margin="10,50,10,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" GotFocus="PbContraseña_GotFocus" Password="--------" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Top"/>
         <Button x:Name="btnLogin" Click="btnLogin_Click" ToolTip="Ingresar" Content="Aceptar" Margin="0,0,0,10" TabIndex="3" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="70"/>
     </Grid>
 </Window>
