--- a/IngresoPedidos/MainWindow.xaml
+++ b/IngresoPedidos/MainWindow.xaml
@@ -17,10 +17,10 @@
 
     <Grid Name="mainGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="70"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid Background="#2C3E50" Grid.Row="0">
+        <Grid Background="#FF1885A1" Grid.Row="0" Margin="5,0,5,0">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
 
                 <Button x:Name="btnNuevoPedido" Click="btnNuevoPedido_Click" Style="{StaticResource roundButtonTemplateGreen}" ToolTip="Ingresar un Nuevo Pedido a la Base de Datos (CTRL+N)" VerticalAlignment="Center" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Margin="5,5,5,5" HorizontalAlignment="Left">
@@ -35,9 +35,9 @@
                 <Image Source="/IngresoPedidos;component/Resources/search.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
             </Button>
 
-                <!--<Button x:Name="btnFiltrarLista" Click="btnFiltrarLista_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                <Button x:Name="btnFiltrarLista" Click="btnFiltrarLista_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                 <Image Source="/IngresoPedidos;component/Resources/list.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
-            </Button>-->
+            </Button>
 
             <!--#region botones del contextmenulist-->
                 <!--<Button x:Name="a1" Click="btnFiltrarLista_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
@@ -76,7 +76,7 @@
             </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Border BorderThickness="0"  CornerRadius="12" Background="#225378" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalAlignment="Center" Height="36">
-                <Label Name="lblNombreUsuario" Margin="0" Foreground="#ECF0F1" VerticalContentAlignment="Center" TextOptions.TextFormattingMode="Display" Padding="5,0" HorizontalContentAlignment="Center"  Background="{x:Null}" FontFamily="Consolas" BorderBrush="{x:Null}" FontWeight="Bold"/>
+                <Label Name="lblNombreUsuario" Margin="0" Foreground="#ECF0F1" VerticalContentAlignment="Center" TextOptions.TextFormattingMode="Display" Padding="5,0" HorizontalContentAlignment="Center"  Background="{x:Null}" BorderBrush="{x:Null}" FontWeight="Bold"/>
             </Border>
 
                 <!--<Button x:Name="btnCambiarContraseña" Click="btnCambiarContraseña_Click" Style="{StaticResource roundButtonTemplate32}" ToolTip="Cambiar contraseña" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="5,5,2,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" Width="36" Height="36">
@@ -90,7 +90,7 @@
         </StackPanel>
         </Grid>
 
-        <DataGrid x:Name="dgPedidos" Grid.Row="1" ColumnWidth="*" Margin="0,0,0,0" Padding="0,0,0,0">
+        <DataGrid x:Name="dgPedidos" Grid.Row="1" ColumnWidth="*" Margin="5,1,5,5" Padding="0,0,0,0" VerticalScrollBarVisibility="Visible" FontFamily="Consolas">
             <!--ItemsSource="{Binding Source={x:Static local:StaticData.ListaPrincipal}}"-->
             <DataGrid.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>
@@ -167,15 +167,15 @@
             </DataGrid.RowStyle>
             
             <DataGrid.Columns>
-                <DataGridTextColumn Header="PEDIDO" Binding="{Binding NumeroPedido}" MaxWidth="110"  />
+                <DataGridTextColumn Header="PEDIDO" Binding="{Binding NumeroPedido}" />
                 <DataGridTextColumn Header="ARTICULO" Binding="{Binding NumeroArticulo}"/>
                 <DataGridTextColumn Header="PRODUCTO" Binding="{Binding NombreProducto}"/>
                 <DataGridTextColumn Header="MODELO" Binding="{Binding NombreModelo}"/>
                 <DataGridTextColumn Header="CANTIDAD" Binding="{Binding CantidadEquipos}"/>
-                <DataGridTextColumn Header="INGRESO A SISTEMA" Binding="{Binding FechaIngreso}" MinWidth="196"/>
-                <DataGridTextColumn Header="ESTADO" Binding="{Binding NombreEstado}" MaxWidth="96"/>
-                <DataGridTextColumn Header="CAMBIO DE ESTADO" Binding="{Binding FechaEstado}" MinWidth="196"/>
-                <DataGridTemplateColumn Header="ANTERIOR" MaxWidth="110">
+                <DataGridTextColumn Header="INGRESO A SISTEMA" Binding="{Binding FechaIngreso,StringFormat=\{0:dd/MM/yy HH:mm:ss\}}"/>
+                <DataGridTextColumn Header="ESTADO" Binding="{Binding NombreEstado}" MaxWidth="136"/>
+                <DataGridTextColumn Header="FECHA DE ESTADO" Binding="{Binding FechaEstado, StringFormat=\{0:dd/MM/yy HH:mm:ss\}}" />
+                <DataGridTemplateColumn Header="ANTERIOR" >
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock><Hyperlink Click="HyperlinkAnterior_Click"><InlineUIContainer>
@@ -184,7 +184,7 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="SUCESOR" MaxWidth="110">
+                <DataGridTemplateColumn Header="SUCESOR">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock><Hyperlink Click="HyperlinkSucesor_Click"><InlineUIContainer>
